string and stream