@@ -1,7 +1,10 @@
 package Java;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class LambdaStream {
 
@@ -9,24 +12,24 @@ public class LambdaStream {
         List<Integer> numbers = Arrays.asList(1, 2, 4, 5, 6);
 
         // square number
-        numbers.stream()
-                .filter(n -> n % 2 == 0)
-                .map(n -> n * n)
-                .forEach(n -> System.out.println(n));
+        // numbers.stream()
+        // .filter(n -> n % 2 == 0)
+        // .map(n -> n * n)
+        // .forEach(n -> System.out.println(n));
 
-        System.out.println("---------------------");
-
-        // filter data
-        List<Integer> number = Arrays.asList(10, 20, 5, 30, 60);
-        number.stream()
-                .filter(n -> n >= 10)
-                .forEach(n -> System.out.println(n));
-
-        System.out.println("---------------------");
-
-        List<Integer> nums = Arrays.asList(1, 2, 4, 5, 6);
+        List<Integer> nums = List.of(1, 2, 4, 5, 6);
         int sum = nums.stream().reduce(0, (a, b) -> a + b);
-        System.out.println(sum);
+        // System.out.println(sum);
 
+        List<Integer> number = Arrays.asList(1, 2, 3, 2, 4, 5, 1, 6, 3, 3);
+
+        number.stream().collect(Collectors.groupingBy(n -> n, Collectors.counting()))
+                .entrySet().stream().filter(e -> e.getValue() > 1).forEach(e -> System.out.println(e.getKey()));
+
+        System.out.println("--------------------");
+
+        Set<Integer> seen = new HashSet<>();
+        number.stream().filter(n -> !seen.add(n)).distinct()
+                .forEach(System.out::println);
     }
 }
